--- a/16-end-to-end-testing.Rmd
+++ b/16-end-to-end-testing.Rmd
@@ -367,7 +367,7 @@ Inside the `BinanceMock` module, we can now update the `get_exchange_info/0` fun
 ```{r, engine = 'elixir', eval = FALSE}
   # /apps/binance_mock/lib/binance_mock.ex
   def get_exchange_info() do
-    case Application.compile_env(:binance_mock, :use_cached_exchange_info) do
+    case Application.get_env(:binance_mock, :use_cached_exchange_info) do
       true -> get_cached_exchange_info()
       _ -> Binance.get_exchange_info()
     end
